@@ -3,6 +3,7 @@
 {{$NEXT}}
     - support forking (issue #6)
     - bugfix for new directory race
+    - added event_mask param
 
 0.04  2015-03-26 11:53:22 CET
     - improved filter and new option: filter_dir (issue #7)
